# sslverify

./: LICENSE.md  Makefile  README.md  pyproject.toml  sslverify.py
tests/: test_basic.py
