[tool.poetry]
name = "sslverify"
version = "0.0.1"
description = "Simple ssl certificate checker."
authors = ["Alex Zh."]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
